--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
 <body>
   <div id="card">
     <!-- All you need to put beautiful, interactive 3D content on your site: -->
-    <model-viewer src="./assets/whale.glb" ios-src="./assets/whale.usdz" poster="./assets/whale.png"
-      alt="A 3D model of an whale" shadow-intensity="1" camera-controls auto-rotate ar>
+    <model-viewer 
+      src="./assets/whale.glb" 
+      ios-src="./assets/whale.usdz" 
+      poster="./assets/whale.png"
+      alt="A 3D model of an whale" 
+      shadow-intensity="1" 
+      camera-controls 
+      auto-rotate 
+      ar
+      autoplay>
     </model-viewer>
     <section class="attribution">
       <span>
