--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       camera-controls 
       auto-rotate 
       ar
-      autoplay>
+      autoplay
+      scale= "0.5 0.5 0.5">
     </model-viewer>
     <section class="attribution">
       <span>
