--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       poster="./assets/whale.png"
       alt="A 3D model of an whale" 
       shadow-intensity="1" 
-      camera-controls 
+      camera-controls
+      camera-target = "2 2 2" 
       auto-rotate 
       ar
-      autoplay
-      scale= "0.1 0.1 0.1">
+      autoplay>
     </model-viewer>
     <section class="attribution">
       <span>
