--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body>
   <div id="card">
     <!-- All you need to put beautiful, interactive 3D content on your site: -->
-    <model-viewer src="./assets/unitx.glb" ios-src="./assets/unitx.usdz" poster="./assets/whale.png"
-      alt="A 3D model of an whale" shadow-intensity="1" camera-controls auto-rotate ar autoplay>
+    <model-viewer src="./assets/lamp1.glb" ios-src="./assets/lamp1.usdz" poster="./assets/whale.png"
+      alt="A 3D model of a Lamp" shadow-intensity="1" camera-controls auto-rotate ar autoplay>
     </model-viewer>
     <section class="attribution">
       <span>
-        <h1>Whale</h1>
+        <h1>Lamp</h1>
     </section>
   </div>
   <script type="module" src="./scripts/model-viewer.min.js">
